# floater-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
src/: binary.rs  builder.rs  dumper.rs  main.rs  select.rs
static/: index.html
