[package]
name = "floater"
version = "0.1.0"
authors = ["Do Duy <juchiast@gmail.com>"]
edition = "2018"

[dependencies]
stdweb = "0.4"
yew = { git = "https://github.com/DenisKolodin/yew", rev = "150e5afd4cd1df5a267c087c6bc9e374a9a9031e" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
