[package]
name = "floater"
version = "0.1.0"
authors = ["Do Duy <juchiast@gmail.com>"]
edition = "2018"

[dependencies]
stdweb = "0.4.20"
yew = { git = "https://github.com/yewstack/yew", rev = "c178d5273fd4375e4facf58ede6973705b25a189" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
